<resources>
    <string name="app_name">APP</string>
    <string name="text">温度转换计</string>
    <string name="score">Team A </string>
    <string name="score2">Team B</string>
    <string name="s1">+1 Point</string>
    <string name="s2">+2 Points</string>
    <string name="s3">+3 Points</string>
    <string name="rest">REST</string>
    <string name="btn">Transform</string>
    <string name="dollar">DOLLAR</string>
    <string name="euro">EURO</string>
    <string name="won">WON</string>
    <string name="conf">CONF</string>
    <string name="inp">"Input "</string>
    <string name="input">"Input  "</string>
    <string name="re">Result:</string>
    <string name="a">result</string>
    <string name="nodata">No Data</string>
    <string name="save">SAVE</string>
    <string name="change_rate">Change Rate</string>
    <string name="inter">Get Rate Form Internet</string>
    <string name="rate_all">Get all Rate Form Internet</string>
</resources>
